# Predicting-Momentum-Shifts-in-Basketball-Using-Supervised-Learning

./: .gitignore  01_download_bref_pbp.py  Makefile  README.md  pbp_0022200012.csv  pyproject.toml  requirements.txt  utils.py
.github/workflows/: python-ci.yml
data/clean/: pbp_202210210ATL_q.csv
data/corpus/: pbp_all_games.parquet  pbp_labeled.parquet
data/model/: pbp_features.parquet
data/raw/: pbp_202210210ATL.csv
results/reports/: business_findings.md  findings.txt
results/tables/: hybrid_hgb_confusion_matrix.csv  hybrid_hgb_permutation_importance.csv  model_summary.csv  model_summary.json  slice_metrics.csv
src/: 01_download_bref_pbp.py  02_clean_pbp.py  03_build_corpus.py  04_create_labels.py  05_build_features.py  06_train_model.py
